# manga_dl

./: Cargo.toml  build.rs  icon.rc
src/: args.rs  cli.rs  error.rs  loading.rs  macros.rs  main.rs  mangagun.rs  mangareader.rs  rawmanga.rs  test.rs
