[package]
name = "manga-reader-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = { version = "0.6.3", default-features = false }
fantoccini = "0.21.2"
reqwest = "0.12.9"
serde_json = "1.0.132"
spinners = "4.1.1"
thiserror = "2.0.1"
tokio = { version = "1.41.1", features = ["full"] }
