[package]
name = "manga_dl"
version = "0.2.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = { version = "0.6.3", default-features = false }
fantoccini = "0.21.2"
futures-util = "0.3.31"
rayon = "1.10.0"
reqwest = "0.12.9"
serde = "1.0.214"
serde_json = "1.0.132"
spinners = "4.1.1"
thiserror = "2.0.1"
tokio = { version = "1.41.1", features = ["full"] }

[build-dependencies]
embed-resource = "3.0.1"
